# hand_gesture_recognition

./: CMakeLists.txt  README.md  README_en.md  install.sh  package.xml
launch/: hand_sign.launch  sign_control.launch
msg/: KeyPoint2D.msg  KeyPoint2DArray.msg
src/: app.py  gesture_recognition.py  hand_sign_recognition.py  sign_to_controller.py
src/model/keypoint_classifier/: keypoint_classifier.py
src/model/point_history_classifier/: point_history_classifier.py
